<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>itson</groupId>
        <artifactId>SistemaCinema</artifactId>
        <version>1.0</version>
    </parent>
    <artifactId>presentacion_SistemaCinema</artifactId>
    <packaging>jar</packaging>
    <repositories>
        <repository>
            <id>unknown-jars-temp-repo</id>
            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
            <url>file:${project.basedir}/lib</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>unknown.binary</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>dto_negocios</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.release>24</maven.compiler.release>
        <exec.mainClass>itson.presentacion_sistemacinema.Presentacion_SistemaCinema</exec.mainClass>
    </properties>
</project>